--- a/locations.yaml
+++ b/locations.yaml
@@ -18,3 +18,7 @@
   name: "NTU School of Computer Engineering"
   lat: 1.347715
   lng: 103.682146
+-
+  name: "SAFTI Military Institute"
+  lat: 1.334330
+  lng: 103.680643
