--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "instagram-node": "^0.5.6",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
+    "request": "^2.55.0",
     "serve-favicon": "~2.2.0",
     "yamljs": "^0.2.1"
   }
